# trishul-ram

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  Dockerfile  Dockerfile.manager  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  kind-cluster.yaml  pyproject.toml  version_1.5.0.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: _config.yml  api.md  architecture.md  changelog.md  checklist.md  connectors.md  deployment.md  design-v1.3.0-broadcast-streams.md  design-v1.3.2-plan.md  examples-snmp-linkdown.json  index.md  pipeline-controller-design.md  plan.txt  roadmap.md  roadmap_1.1.2.md  roadmap_1.2.0.md  transforms.md  v1.1.0-plan.md  v1.3.3_plan.md
docs/archive/: structured-record-shaping-design.md  test-gap-report.md  v1.3.0-broadcast-streams-design.md  v1.3.1-plan.md  v1.3.2-batch-recovery-plan.md  v1.3.2-plan.md
docs/roadmap_1.1.0/: 01-wizard.md  02-live-metrics.md  03-alert-rules-ui.md  04-yaml-diff-viewer.md  05-connector-test.md  06-templates.md  07-import-export.md  README.md
docs/schemas/: 3gpp_32401.asn
files/mibs_compiled/: ENTITY-MIB.py  HOST-RESOURCES-MIB.py  IANA-ENTITY-MIB.py  IANAifType-MIB.py  IF-MIB.py  IP-MIB.py  SNMPv2-MIB.py  TCP-MIB.py  UDP-MIB.py  UUID-TC-MIB.py
helm/: Chart.yaml  values-template.yaml  values.yaml
helm/files/pipelines/: sample-health.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  headless-service.yaml  manager-deployment.yaml  manager-headless-service.yaml  manager-statefulset.yaml  pvc.yaml  role-k8s-services.yaml  secret-auth.yaml  service-ui.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml  worker-headless-service.yaml  worker-ingress-service.yaml  worker-statefulset.yaml
pipelines/: all-transforms-test.yaml  cisco_pm_proto_to_json.yaml  csv-ingest.yaml  ericsson-pm-ber-to-csv.yaml  ericsson-pm-ber-to-json.yaml  example_sftp_to_sftp.yaml  kafka-to-clickhouse-demo.yaml  kafka-to-opensearch.yaml  minimal.yaml  mo-ncom-to-csv.yaml  multi-format-fanout.yaml  nodes-compute-to-csv.yaml  proto-device-event.yaml  rest-echo-receiver.yaml  rest-nms-to-sql.yaml  rest-pipeline.yaml  sftp-pm-to-kafka.yaml  sftp-read.yaml  snmp-get-system-to-sftp-json.yaml  snmp-get-v3-system-to-sftp-json.yaml  snmp-poll-ifmib-to-influxdb.yaml  snmp-trap-local-to-receiver.yaml  snmp-trap-receiver-to-sftp-json.yaml  snmp-trap-receiver.yaml  snmp-trap-sender.yaml  snmp-trap-webhook-to-receiver.yaml  snmp-walk-iftable.yaml  snmp-walk-v3-iftable-to-sftp-json.yaml  syslog-to-opensearch.yaml  test-cisco-pm-sftp-to-json.yaml  webhook-alarm-fanout.yaml  xml-ingest.yaml
scripts/: deploy-docker-standalone.sh  deploy-kind-tram-dev.sh
tests/: conftest.py
tests/integration/: test_alerts_webhook.py  test_api_auth.py  test_api_full.py  test_local_pipeline.py  test_mib_resolve.py  test_sftp_pipeline.py
tests/unit/: test_agent_assets.py  test_agent_server.py  test_alerts.py  test_amqp_connectors.py  test_api_ai.py  test_api_ai_docs.py  test_api_ai_router.py  test_api_auth_router.py  test_api_config_schema.py  test_api_connectors_router.py  test_api_health_runs.py  test_api_internal_router.py  test_api_key.py  test_api_middleware.py  test_api_misc_routers.py  test_api_pipelines.py  test_api_plugins.py  test_api_stats_db.py  test_api_stats_router.py  test_asn1_serializer.py  test_auth_utils.py  test_avro_serializer.py  test_azure_blob_connectors.py  test_batch_size_on_error.py  test_bytes_serializer.py  test_cdr_transforms.py  test_circuit_breaker.py  test_cli_main.py  test_clickhouse_connectors.py  test_cluster.py  test_config_v07.py  test_controller_metrics.py  test_controller_standalone_stats.py  test_controller_udp.py  test_corba_connector.py  test_daemon_server.py  test_db_v07.py  test_dlq.py  test_elasticsearch_connectors.py  test_executor.py  (+59 more)
tram/: __init__.py
tram-ui/: index.html  package-lock.json  package.json
tram-ui/src/: api.js  main.js  router.js  style.css  utils.js
tram-ui/src/pages/: cluster.html  cluster.js  dashboard.html  dashboard.js  detail.html  detail.js  editor.html  editor.js  login.js  mibs.html  mibs.js  pipelines.html  pipelines.js  plugins.html  runs.html  runs.js  schemas.html  schemas.js  (+5 more)
tram/agent/: assets.py  metrics.py  reconciler.py  server.py  stats_store.py  worker_pool.py
tram/alerts/: __init__.py  evaluator.py
tram/api/: __init__.py  app.py  auth.py  config_schema.py  middleware.py
tram/cli/: __init__.py  main.py
tram/cluster/: __init__.py  coordinator.py  registry.py
tram/connectors/: __init__.py  file_sink_common.py
tram/core/: __init__.py  base.py  config.py  context.py  exceptions.py  log_config.py  mib_compiler.py
tram/daemon/: __init__.py  server.py
tram/interfaces/: __init__.py  base_serializer.py  base_sink.py  base_source.py  base_transform.py
tram/metrics/: __init__.py  registry.py
tram/models/: __init__.py  pipeline.py
tram/persistence/: __init__.py  db.py  file_tracker.py
tram/pipeline/: __init__.py  controller.py  executor.py  k8s_service_manager.py  linter.py  loader.py  manager.py
tram/registry/: __init__.py  registry.py
tram/scheduler/: __init__.py  scheduler.py
tram/schema_registry/: __init__.py  client.py
tram/serializers/: __init__.py  asn1_serializer.py  avro_serializer.py  bytes_serializer.py  csv_serializer.py  json_serializer.py  msgpack_serializer.py  ndjson_serializer.py  parquet_serializer.py  pm_xml_serializer.py  protobuf_serializer.py  text_serializer.py  xml_serializer.py
tram/telemetry/: __init__.py  tracing.py
tram/transforms/: __init__.py  add_field.py  aggregate.py  cast.py  coalesce_fields.py  deduplicate.py  drop.py  enrich.py  explode.py  filter_rows.py  flatten.py  hex_decode.py  inject_meta.py  jmespath_extract.py  json_flatten.py  limit.py  mask.py  melt.py  path_patterns.py  path_utils.py  project.py  regex_extract.py  rename.py  select_from_list.py  sort.py  template.py  timestamp_normalize.py  unnest.py  validate.py  value_map.py
tram/ui/: index.html  package-lock.json  package.json
tram/watcher/: __init__.py  pipeline_watcher.py
(+118 files in other folders)
