[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tram"
version = "1.2.0"
description = "Trishul Real-time Aggregation & Mediation — telecom data pipeline daemon"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["telecom", "data-pipeline", "sftp", "pm", "fm", "etl"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # ── Shared: both manager and worker images need these ──────────────────
    "typer[all]>=0.12",
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "paramiko>=3.4",        # SFTP connector
    "simpleeval>=1.0",      # condition filtering in transforms
    "defusedxml>=0.7",      # safe XML parsing
    "lxml>=5.2",            # XPath / XML connector
    "rich>=13.7",           # CLI output
    "httpx>=0.27",          # HTTP connector + WorkerPool health calls
]

[project.optional-dependencies]
# ── Deployment profiles ────────────────────────────────────────────────────
#
# manager  — everything the manager/standalone pod needs on top of base.
#            Adds APScheduler (scheduling), SQLAlchemy (persistence), and
#            the two most common DB drivers.  Install for any pod that owns
#            the scheduler and writes run history to the database.
#
# worker   — semantic marker; base dependencies are already sufficient for
#            the worker execution plane.  Add connector extras as needed,
#            e.g. pip install tram[worker,kafka,snmp,avro]
#
manager = [
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",  # PostgreSQL driver (moved from standalone postgresql extra)
    "PyMySQL>=1.1",           # MySQL/MariaDB driver (moved from standalone mysql extra)
]
worker = []                   # base is sufficient; this is a semantic marker only

# ── Connector / feature extras ─────────────────────────────────────────────
kafka = ["kafka-python>=2.0"]
opensearch = ["opensearch-py>=2.4"]
s3 = ["boto3>=1.35"]
snmp = ["pysnmp-lextudio>=6.2,<6.3", "pyasn1>=0.4.8,<0.6"]
avro = ["fastavro>=1.9"]
protobuf_ser = ["protobuf>=4.25", "grpcio-tools>=1.64"]
asn1 = ["asn1tools>=0.167"]
parquet = ["pyarrow>=16"]
msgpack_ser = ["msgpack>=1.0"]
mqtt = ["paho-mqtt>=2.0"]
amqp = ["pika>=1.0"]
nats = ["nats-py>=2.3"]
gnmi = ["pygnmi>=0.8"]
jmespath = ["jmespath>=1.0"]
sql = ["sqlalchemy>=2.0"]
postgresql = ["psycopg2-binary>=2.9"]
mysql = ["PyMySQL>=1.1"]
influxdb = ["influxdb-client>=1.30"]
redis = ["redis>=5.0"]
gcs = ["google-cloud-storage>=2.0"]
azure = ["azure-storage-blob>=12.0"]
websocket = ["websockets>=12.0"]
elasticsearch = ["elasticsearch>=8.0"]
metrics = ["prometheus-client>=0.20"]
prometheus_rw = ["protobuf>=4.25", "python-snappy>=0.7"]
corba = ["omniORBpy>=4.3"]
clickhouse = ["clickhouse-driver>=0.2"]
mib = ["pysmi-lextudio>=1.1"]
otel = ["opentelemetry-sdk>=1.20", "opentelemetry-exporter-otlp-proto-grpc>=1.20"]
watch = ["watchdog>=3.0"]
ai-anthropic = ["anthropic>=0.30"]
ai-openai = ["openai>=1.40"]
dev = [
    "tram[manager]",          # apscheduler + sqlalchemy required by unit/integration tests
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]
all = [
    "tram[manager]",          # always include manager profile in all
    "tram[kafka]",
    "tram[opensearch]",
    "tram[s3]",
    "tram[snmp]",
    "tram[avro]",
    "tram[protobuf_ser]",
    "tram[parquet]",
    "tram[msgpack_ser]",
    "tram[mqtt]",
    "tram[amqp]",
    "tram[nats]",
    "tram[gnmi]",
    "tram[jmespath]",
    "tram[sql]",
    "tram[influxdb]",
    "tram[redis]",
    "tram[gcs]",
    "tram[azure]",
    "tram[websocket]",
    "tram[elasticsearch]",
    "tram[metrics]",
    "tram[prometheus_rw]",
    "tram[clickhouse]",
    "tram[asn1]",
    "tram[corba]",
    "tram[mib]",
    "tram[otel]",
    "tram[watch]",
    "tram[postgresql]",
    "tram[mysql]",
]

[project.scripts]
tram = "tram.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["tram*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "DEBUG"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
