[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tram"
version = "1.2.2"
description = "Trishul Real-time Aggregation & Mediation — telecom data pipeline daemon"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["telecom", "data-pipeline", "sftp", "pm", "fm", "etl"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # ── Shared: both manager and worker images need these ──────────────────
    "typer[all]>=0.12,<1.0",
    "fastapi>=0.111,<2.0",
    "python-multipart>=0.0.9,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
    "paramiko>=3.4,<4.0",        # SFTP connector
    "simpleeval>=1.0,<2.0",      # condition filtering in transforms
    "defusedxml>=0.7,<1.0",      # safe XML parsing
    "lxml>=5.2,<6.0",            # XPath / XML connector
    "rich>=13.7,<15.0",          # CLI output
    "httpx>=0.27,<1.0",          # HTTP connector + WorkerPool health calls
]

[project.optional-dependencies]
# ── Deployment profiles ────────────────────────────────────────────────────
#
# manager  — everything the manager/standalone pod needs on top of base.
#            Adds APScheduler (scheduling), SQLAlchemy (persistence), and
#            the two most common DB drivers.  Install for any pod that owns
#            the scheduler and writes run history to the database.
#
# worker   — semantic marker; base dependencies are already sufficient for
#            the worker execution plane.  Add connector extras as needed,
#            e.g. pip install tram[worker,kafka,snmp,avro]
#
manager = [
    "apscheduler>=3.10,<4.0",    # APScheduler 4.x has breaking API changes
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "PyMySQL>=1.1,<2.0",
]
worker = []                   # base is sufficient; this is a semantic marker only

# ── Connector / feature extras ─────────────────────────────────────────────
kafka = ["kafka-python>=2.0,<3.0"]
opensearch = ["opensearch-py>=2.4,<3.0"]
s3 = ["boto3>=1.35,<2.0"]        # boto3↔botocore tight coupling; exclude from all extra
snmp = ["pysnmp-lextudio>=6.2,<6.3", "pyasn1>=0.4.8,<0.6"]
avro = ["fastavro>=1.9,<2.0"]
protobuf_ser = ["protobuf>=4.25,<6.0", "grpcio-tools>=1.64,<2.0"]  # grpcio tight per-patch coupling
asn1 = ["asn1tools>=0.167,<1.0"]
parquet = ["pyarrow>=16,<20"]    # exclude from all extra (~150 MB)
msgpack_ser = ["msgpack>=1.0,<2.0"]
mqtt = ["paho-mqtt>=2.0,<3.0"]
amqp = ["pika>=1.0,<2.0"]
nats = ["nats-py>=2.3,<3.0"]
gnmi = ["pygnmi>=0.8,<1.0"]
jmespath = ["jmespath>=1.0,<2.0"]
sql = ["sqlalchemy>=2.0,<3.0"]
postgresql = ["psycopg2-binary>=2.9,<3.0"]
mysql = ["PyMySQL>=1.1,<2.0"]
influxdb = ["influxdb-client>=1.30,<2.0"]
redis = ["redis>=5.0,<6.0"]
gcs = ["google-cloud-storage>=2.0,<3.0"]   # exclude from all extra (~50 MB)
azure = ["azure-storage-blob>=12.0,<13.0"] # exclude from all extra (~30 MB)
websocket = ["websockets>=12.0,<15.0"]
elasticsearch = ["elasticsearch>=8.0,<9.0"]
metrics = ["prometheus-client>=0.20,<1.0"]
prometheus_rw = ["protobuf>=4.25,<6.0", "python-snappy>=0.7,<1.0"]
corba = ["omniORBpy>=4.3"]       # system package only — no PyPI wheel
clickhouse = ["clickhouse-driver>=0.2,<1.0"]
mib = ["pysmi-lextudio>=1.1,<2.0"]
otel = [                         # SDK↔exporter tight coupling; pin together
    "opentelemetry-sdk>=1.20,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20,<2.0",
]
watch = ["watchdog>=3.0,<7.0"]
ai-anthropic = ["anthropic>=0.30,<2.0"]
ai-openai = ["openai>=1.40,<2.0"]
dev = [
    "tram[manager]",          # apscheduler + sqlalchemy required by unit/integration tests
    "tram[snmp]",             # SNMP unit tests exercise trap sink/source code paths
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<2.0",
    "pytest-cov>=5.0,<7.0",
    "pytest-mock>=3.14,<4.0",
    "ruff>=0.4,<1.0",
    "respx>=0.20,<1.0",       # HTTP mock for CLI tests
]
all = [
    # Excluded (cause pip backtrack loop or require system libs):
    #   corba        — omniORBpy has no PyPI wheel (system package only)
    #   s3           — boto3↔botocore per-patch coupling causes backtrack (~60 MB)
    #   gcs          — google-cloud-storage (~50 MB)
    #   azure        — azure-storage-blob (~30 MB)
    #   parquet      — pyarrow (~150 MB)
    #   protobuf_ser — grpcio-tools depends on setuptools with no floor; triggers backtrack
    # Install individually when needed: pip install tram[s3] / tram[protobuf_ser]
    "tram[manager]",
    "tram[kafka]",
    "tram[opensearch]",
    "tram[snmp]",
    "tram[avro]",
    "tram[msgpack_ser]",
    "tram[mqtt]",
    "tram[amqp]",
    "tram[nats]",
    "tram[gnmi]",
    "tram[jmespath]",
    "tram[sql]",
    "tram[influxdb]",
    "tram[redis]",
    "tram[websocket]",
    "tram[elasticsearch]",
    "tram[metrics]",
    "tram[prometheus_rw]",
    "tram[clickhouse]",
    "tram[asn1]",
    "tram[mib]",
    "tram[otel]",
    "tram[watch]",
    "tram[postgresql]",
    "tram[mysql]",
]

[project.scripts]
tram = "tram.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["tram*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "DEBUG"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
